@@ -20,16 +20,18 @@ AUX rtorrentd.init 815 RMD160 7f16a07cb8278219aba5554bc0c7eda358e63cca SHA1 7243
 DIST rtorrent-0.8.6.tar.gz 521045 RMD160 3d5109d4ee26c663b376e0b9f610ab6055c57ba9 SHA1 ffce3959ba91738bb444d689db3db1e2375b14ce SHA256 8c96c68e1524162abd1fc4b612d0c3d924fccc25159c0b3f208e69281f0b32db
 DIST rtorrent-0.8.7.tar.gz 547435 RMD160 52564096341088087c7a316c8e7637df77b672b6 SHA1 691c95e948d02927edc05321e52cd1c63513fabc SHA256 1fd0c9b2b3fe81b035209417c4dd4514473411f16b15ffe7fefe87eaff1a58d2
 DIST rtorrent-0.9.1.tar.gz 591114 RMD160 3cc6db652ca0147fed9b223ecf4e27849a9d3523 SHA1 e18dadae77c74113cbd6b910352b54dd5ef25465 SHA256 466c529a5d69e4cf8267029821dc5811fffa5fad354d80ec64c88b12c1a4c5f1
+DIST rtorrent-0.9.2.tar.gz 591837 RMD160 130a4c7f3bd018f7247d4561170d6878ab7a120f SHA1 2a642d722745091265037ed8929a23c237a3b99f SHA256 5c8f8c780bee376afce3c1cde2f5ecb928f40bac23b2b8171deed5cf3c888c3d
 EBUILD rtorrent-0.8.6-r1.ebuild 1783 RMD160 b1197bc64b703d3e43c2f8f2a493cd84b47d10d2 SHA1 491c0afe275a2cdf1b5fce6cecfafac239894b00 SHA256 015b7a084ea36e4bdf016a9b953168d5a8859d526d65a69e908b5a6e68af198d
 EBUILD rtorrent-0.8.6-r4.ebuild 1841 RMD160 25d11053fa42a99eaf13716aa250fccc3db1254e SHA1 7d850b76704d1f4ea395651d2b395c77cd410de0 SHA256 38aa1f325ebf894992b9c5c50612584d11c42312685bc16941075d31c47ff86c
 EBUILD rtorrent-0.8.7-r4.ebuild 1969 RMD160 967072e9436cd1f51021882e8d003224a6ea4511 SHA1 72cfbf0d5404c74e6dcbcfed39be19963749e49f SHA256 f27293afaba9a4ef79139f778dcd8dbacc27df40879ae8d9b5c9141278847cf1
 EBUILD rtorrent-0.9.1.ebuild 1433 RMD160 b30aedff23d667c7c6b6ff2641e5d738a678ef8e SHA1 42886606d5bd142e3f80f54658d95677a330c0c4 SHA256 9f6950dcc88646c3b782c5111f603576333961ffbb24821b45159d7b02eec666
-MISC ChangeLog 26796 RMD160 652ac9abf6e11b978ae1df369d87907ded21a08b SHA1 434514b451b548b7d5908a351866978f48bb857b SHA256 37fd37c2861196fd4ea5b9325cf9a159350710f319174bfa215fe521434b3f4e
+EBUILD rtorrent-0.9.2.ebuild 1348 RMD160 3912c7ee4c9d12d19bd92b01498dcf43cb1dc123 SHA1 3691c2da7fe3fbdc1544c04ea84b2265edc3060f SHA256 8e049424a66e182cc0606af82515f647567f7616820673c5502aba860b31f874
+MISC ChangeLog 26928 RMD160 b686867ab5fd9bbffb47a5bbef1c47df5cb9fca7 SHA1 074d5be6e8868f4159f30d20d31484d83fdb2483 SHA256 a379cef41cfa3e8d7835592948598904009e178ee96423b5eae17d729fa5fb19
 MISC metadata.xml 461 RMD160 20828b74a80b51c1df06f6dba3aa63fbe7eec437 SHA1 7d50936803d36c9e88d2030bcf6647d4cede9d09 SHA256 db7942b39f614d72ff07b2ca64acbddd975cc016761d0037eb9edf786a4b295d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/Ar+gACgkQX3X2B8XHTokIqgCfaiI+z667jeOefgDPaF5VUa6e
-kAQAn3uVKUd4FCviaZFFPy3hx+SqmYBB
-=RiJj
+iEYEARECAAYFAk/XomYACgkQX3X2B8XHTol69ACdHdv5ETK/veBAkkKCV9V9e6qq
+k18Anja+aLsE9Amu3GB87pTLJ24nWa3a
+=2Pww
 -----END PGP SIGNATURE-----
