@@ -1,6 +1,11 @@
 # ChangeLog for net-p2p/rtorrent
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.176 2012/05/04 06:33:35 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.177 2012/06/09 16:00:55 jlec Exp $
+
+*rtorrent-0.9.2 (09 Jun 2012)
+
+  09 Jun 2012; Justin Lecher <jlec@gentoo.org> +rtorrent-0.9.2.ebuild:
+  Version BUmp, move to EAPI=4
 
   04 May 2012; Jeff Horelick <jdhore@gentoo.org> rtorrent-0.8.6-r1.ebuild,
   rtorrent-0.8.6-r4.ebuild, rtorrent-0.8.7-r4.ebuild, rtorrent-0.8.9.ebuild,
